--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 
         <nav style="margin-left: 50px;">
             <ul class="nav-menu" style="list-style: none; display: flex; margin: 0; padding: 0;">
-                <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
-                <li class="nav-item" style="margin: 0 20px;"><a href="#about" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
-                <li class="nav-item" style="margin: 0 20px;"><a href="services.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
-                <li class="nav-item" style="margin: 0 20px;"><a href="product.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
-                <li class="nav-item" style="margin: 0 20px;"><a href="contact.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
-                <li class="nav-item" style="margin: 0 20px;"><a href="internship.php" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Internship</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="about.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="internship.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Internship</a></li>
             </ul>
-        </nav>
+          </nav>
     </div>
 </header>
 
