--- a/services.html
+++ b/services.html
@@ -31,6 +31,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/service.css" rel="stylesheet">
+  <link rel="stylesheet"  href="assets/css/internship.css">
 
   <!-- Lottie Animation Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/bodymovin.min.js"></script>
@@ -291,6 +292,222 @@
     </div>
 </section>
 <!-- End Key Features Section --> 
+
+
+<!-- ======= Internship Section ======= -->
+   <!-- ======= Internship Section ======= -->
+<section class="internship-section">
+    <h1>Internship</h1>
+    <p>We are the best Internship company in Ahmedabad, Pune, Mumbai providing Internship program in Java, Flutter, React JS, Php, Data Science, Data Analytics, and Software Testing.</p>
+
+    <!-- Internship Cards -->
+    <div class="internship-container">
+        <!-- Web Development Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/html-logo.png" alt="HTML Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="web-intern"> Web Development Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Web Development Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Android Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/android.png" alt="Android Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="android-intern.html"> Android Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Android Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- RPA Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJbqFhlIRvtoDZSbsL74OkJriIGl41GdRdhw&s" alt="RPA Logo" />
+            </div>
+            <div class="internship-details">
+                <h3> <a href="rpa-internship.html">   RPA Internship </a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('RPA Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Python Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/python.png" alt="Python Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="python-internship.html"> Python Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Python Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- SAP Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/sap.png" alt="SAP Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="sap-internship.html"> SAP Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('SAP Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Snowflake Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/snowflke.png" alt="Snowflake Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="snowflake-internship"> Snowflake Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Snowflake Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Data Science Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/data science.jpg" alt="Data Science Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="data-science-internship.html"> Data Science Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Data Science Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Data Analytics Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/analyics.png" alt="Analytics Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="data-analytics-internship.html"> Data Analytics Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Data Analytics Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Digital Marketing Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/digital marketing.png" alt="Digital Marketing Logo" />
+            </div>
+            <div class="internship-details">
+                <h3><a href="digital-marketing-internship.html"> Digital Marketing Internship</a></h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Digital Marketing Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Pop-Up Form -->
+<div class="popup-form" id="popupForm">
+    <div class="form-container">
+        <h2>Internship Application</h2>
+        <form action="https://api.web3forms.com/submit" method="post" role="form" class="php-email-form">
+            <input type="hidden" name="access_key" value="ece71aa4-a60d-4ff5-8a58-c352006ff40a">
+
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address" placeholder="Enter your address" required>
+
+            <label for="contact">Contact:</label>
+            <input type="text" id="contact" name="contact" placeholder="Enter your contact number" required>
+
+            <label for="city">City:</label>
+            <input type="text" id="city" name="city" placeholder="Enter your city" required>
+
+            <label for="technology">Technology:</label>
+            <select id="technology" name="technology" required>
+                <option value="" disabled selected>Select an Internship</option>
+                <option value="Web Development Internship">Web Development Internship</option>
+                <option value="Android Internship">Android Internship</option>
+                <option value="RPA Internship">RPA Internship</option>
+                <option value="Python Internship">Python Internship</option>
+                <option value="SAP Internship">SAP Internship</option>
+                <option value="Snowflake Internship">Snowflake Internship</option>
+                <option value="Data Science Internship">Data Science Internship</option>
+                <option value="Data Analytics Internship">Data Analytics Internship</option>
+                <option value="Digital Marketing Internship">Digital Marketing Internship</option>
+            </select>
+
+            <div class="form-buttons">
+                <button type="submit" class="submit-btn">Submit</button>
+                <button type="button" class="cancel-btn" onclick="closeApplicationForm()">Cancel</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script>
+    // Open the application form with pre-selected internship
+    function openModal(selectedInternship) {
+        const popupForm = document.getElementById("popupForm");
+        const technologyDropdown = document.getElementById("technology");
+
+        // Show the pop-up form
+        popupForm.style.display = "flex";
+
+        // Pre-select the relevant internship option
+        technologyDropdown.value = selectedInternship;
+    }
+
+    // Close the application form
+    function closeApplicationForm() {
+        const popupForm = document.getElementById("popupForm");
+        popupForm.style.display = "none";
+    }
+
+    // Close the form when the Escape key is pressed
+    document.addEventListener("keydown", function (event) {
+        if (event.key === "Escape") {
+            closeApplicationForm();
+        }
+    });
+</script>
 
 
 
