--- a/services.html
+++ b/services.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Fourise Software Solutions Pvt. Ltd.</title>
   <meta content="" name="description">
@@ -13,9 +12,6 @@
   <!-- Favicons -->
   <link href="assets/img/testimonials/favicon1.jpg" rel="icon">
   <link href="assets/img/testimonials/favicon1.jpg" rel="apple-touch-icon">
-
-  <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -31,10 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/service.css" rel="stylesheet">
-  <link rel="stylesheet"  href="assets/css/internship.css">
-
-  <!-- Lottie Animation Library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/bodymovin.min.js"></script>
 
   <!-- =======================================================
   * Template Name: Presento - v1.1.1
@@ -42,16 +34,30 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+  body {
+    overflow-x: hidden; /* Hides the horizontal scrollbar */
+    overflow-y: scroll; /* Keeps the vertical scroll functionality */
+    scrollbar-width: thin; /* For Firefox, to make the scrollbar thinner */
+  }
+
+  /* Optional: For Webkit browsers like Chrome/Safari */
+  ::-webkit-scrollbar {
+    width: 0px; /* Hides the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: transparent; /* Optional: Make the scrollbar thumb invisible */
+  }
+</style>
 </head>
 
 
 <body>
 
-
   <!-- ======= Header ======= -->
-<!-- ======= Header ======= -->
-  <!-- Header -->
-      <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
+ <!-- Header -->
+  <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
     <div style="display: flex; justify-content: center; align-items: center;">
         <h1 id="logoText" style=" font-weight: bold; margin: 0; padding: 0; color: #e03a3c;">
             <a href="index.html" style="text-decoration: none; color: inherit;">
@@ -64,6 +70,7 @@
               <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="about.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="career.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Career</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
             </ul>
