--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
               <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="about.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="career.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Career</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
             </ul>
