--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-<style>
+ <style>
   body {
     overflow-x: hidden; /* Hides the horizontal scrollbar */
     overflow-y: scroll; /* Keeps the vertical scroll functionality */
@@ -59,8 +59,11 @@
 </style>
 </head>
 
+
 <body>
 
+  <!-- ======= Header ======= -->
+ <!-- Header -->
   <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
     <div style="display: flex; justify-content: center; align-items: center;">
         <h1 id="logoText" style=" font-weight: bold; margin: 0; padding: 0; color: #e03a3c;">
@@ -74,6 +77,7 @@
               <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="about.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="career.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Career</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
             </ul>
