--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@ function adjustLogoAndNav() {
         marginTop = "-30px";  // Small Mobile Screens
     } else if (screenWidth <= 425) {
         marginTop = "-30px"; // Mobile L
+    } else if (screenWidth <= 768) {
+        marginTop = "-20px";  // For 768px screens
     } else {
         marginTop = "0px";  // Default for larger screens
     }
@@ -191,6 +193,7 @@ function debounce(func, delay) {
 }
 
 window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
+
 
 
 
